Add Header Section

--- a/index.html
+++ b/index.html
@@ -19,6 +19,67 @@
          <link rel="icon" type="image/x-icon" href="assets/images/favicon.png">
 </head>
 <body>
-    
+        <!-- Header Section  -->
+    <header class="header section">
+        <nav class="nav container">
+            <p class="logo">Travel agency</p>
+            <ul class="nav-bar">
+                <li class="nav-list"><a href="#" class="nav-links">Flights</a></li>
+                <li class="nav-list"><a href="#" class="nav-links">Hotel</a></li>
+                <li class="nav-list"><a href="#" class="nav-links">Trains</a></li>
+                <li class="nav-list"><a href="#" class="nav-links">Buses</a></li>
+                <li class="nav-list"><a href="#" class="nav-links">Cabs</a></li>
+            </ul>
+            <button class="nav-btn">Sign In</button>
+        </nav>
+
+        <div class="hero container">
+            <p class="hero-sub-title">READY TAKE-OFF</p>
+            <p class="hero-title">CONVENIENT ONLINE <br> FLIGHT BOOKING SERVICES</p>
+            <img src="assets/images/airplane.png" alt="airplane" class="hero-img">
+        </div>
+
+        <div class="search-container container">
+            <div class="hero-trip-options">
+                <button class="first">One way</button>
+                <button class="second">Round Trip</button>
+                <button class="third">Multi City</button>
+            </div>
+
+            <div class="from-return">
+                <div class="hero-place">
+                    <div class="hero-from">
+                        <p>From</p>
+                        <p class="from-place">Tokyo, Japan <i class="fa-solid fa-chevron-down"
+                                style="margin-left: 4ch;"></i></p>
+                    </div>
+
+                    <i class="fa-solid fa-arrow-right-arrow-left hero-icon"></i>
+
+                    <div class="hero-to">
+                        <p>To</p>
+                        <p class="to-place">Berlin, Germany <i class="fa-solid fa-chevron-down"
+                                style="margin-left: 3ch;"></i></p>
+                    </div>
+                </div>
+
+                <div class="hero-dates">
+                    <div class="departure">
+                        <p>Departure</p>
+                        <p class="departure-date"><i class="fa-solid fa-calendar-days"></i> Oct 11, 2023 <i
+                                class="fa-solid fa-chevron-down" style="margin-left: 2ch;"></i></p>
+                    </div>
+                    <div class="return">
+                        <p>Return</p>
+                        <p class="return-date"><i class="fa-solid fa-calendar-days"></i> Dec 15, 2023 <i
+                                class="fa-solid fa-chevron-down" style="margin-left: 2ch;"></i></p>
+                    </div>
+                    <div class="hero-search-btn">
+                        <i class="fa-solid fa-magnifying-glass"></i>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </header>
 </body>
 </html>
