Add Top Deals Section

--- a/index.html
+++ b/index.html
@@ -81,5 +81,47 @@
             </div>
         </div>
     </header>
+
+        <!-- Top Flight Deals Section  -->
+    <main class="main">
+        <section class="deals container">
+            <div class="deals-header">
+                <h1 class="deals-header-title">TOP FLIGHT DEALS</h1>
+                <p class="deals-title-info">Discover top flight deals for elite travel experience at <br> unprecedented
+                    price.</p>
+            </div>
+
+            <div class="deals-places">
+                <div class="deals-places-airlines">
+                    <div class="deals-places-airlines-info">
+                        <p>DTOUR2023</p>
+                        <h3>LUXURY TRAVEL AND <br> AIRLINES</h3>
+                        <p class="info">Luxury travel and airlines offer opulence, comfort, and exclusivity for
+                            discerning travelers.</p>
+                        <button>Learn More</button>
+                    </div>
+
+                    <div class="deals-places-airlines-img">
+                        <img src="assets/images/plane seats.jpg" alt="plane seats">
+                    </div>
+                </div>
+
+                <div class="deals-places-bookings">
+                    <img src="assets/images/building.jpg" alt="building">
+                    <div class="image-overlay">
+                        <p>HOTEL BOOKINGS</p>
+                    </div>
+                </div>
+
+                <div class="deals-places-bookings">
+                    <img src="assets/images/building2.jpg" alt="building">
+                    <div class="image-overlay">
+                        <p>BOOK DOMESTIC</p>
+                    </div>
+                </div>
+
+            </div>
+        </section>
+        </main>
 </body>
 </html>
