Add popular section

--- a/index.html
+++ b/index.html
@@ -122,6 +122,44 @@
 
             </div>
         </section>
+
+        
+        <!-- Popular Section  -->
+        <section class="popular container">
+            <div class="popular-header">
+                <h1 class="popular-title">MOST POPULAR AIRLINES </h1>
+                <p class="popular-title-info">The world's leading airlines offer top-not notch service, ensuring
+                    memorable <br>
+                    travel experiences for passengers.</p>
+            </div>
+
+            <div class="popular-airlines">
+                <div class="popular-airlines-card last">
+                    <img src="assets/images/qatar.jpg" alt="">
+                    <div class="popular-airlines-label">QATAR AIRLINES </div>
+                </div>
+
+                <div class="popular-airlines-card">
+                    <img src="assets/images/turkish.jpg" alt="">
+                    <div class="popular-airlines-label">TURKISH AIRLINES </div>
+                </div>
+
+                <div class="popular-airlines-card unique">
+                    <img src="assets/images/emirates.jpg" alt="">
+                    <div class="popular-airlines-label ">EMIRATES AIRLINES </div>
+                </div>
+
+                <div class="popular-airlines-card">
+                    <img src="assets/images/qatar.jpg" alt="">
+                    <div class="popular-airlines-label">QATAR AIRLINES </div>
+                </div>
+
+                <div class="popular-airlines-card last">
+                    <img src="assets/images/qatar.jpg" alt="">
+                    <div class="popular-airlines-label">QATAR AIRLINES </div>
+                </div>
+            </div>
+        </section>
         </main>
 </body>
 </html>
