Add Booking section

--- a/index.html
+++ b/index.html
@@ -160,6 +160,89 @@
                 </div>
             </div>
         </section>
+
+                <!-- Booking Section  -->
+        <section class="Booking container">
+            <div class="booking-header">
+                <h1 class="booking-title">BOOK YOUR HOTEL</h1>
+                <p class="booking-title-info">The world's leading airlines offer top-notch service, ensuring <br>
+                    memorable
+                    travel experiences for passengers.</p>
+            </div>
+
+            <div class="booking-main">
+                <div class="booking-main-hotel_moxy">
+                    <div class="booking-img_wrapper booking-first">
+                        <img src="assets/images/Swimming-Pool-Companies-in-Dubai-2-1-1024x1024.jpg" alt="">
+                    </div>
+                    <div class="booking-main-img_overlay">
+                        <p class="booking-overly_label">MOXY NYC DOWNTOWN</p>
+                    </div>
+                </div>
+
+                <div class="booking-main-hotel_moxy">
+                    <div class="booking-img_wrapper">
+                        <img src="assets/images/swimming pool.jpg" id="booking-middle-img" alt="">
+                    </div>
+                    <div class="booking-main-img_overlay booking-middle-img-overlay">
+                        <p class="booking-overly_label">HOTEL TROPICAL DAISY</p>
+                        <p class="booking-overlay_starts">⭐⭐⭐⭐</p>
+                        <p class="booking-overlay_distance">1.22 km From City Center</p>
+                        <button class="booking-overlay_btn">Book now</button>
+                    </div>
+                </div>
+
+                <div class="booking-main-hotel_moxy">
+                    <div class="booking-img_wrapper booking-first">
+                        <img src="assets/images/luxury-beach-house-with-sea-view-swimming-pool-terrace-modern-design_42251-453.jpg"
+                            alt="" id="booking-last-img">
+                    </div>
+                    <div class="booking-main-img_overlay">
+                        <p class="booking-overly_label">HOTEL TROPICAL DAISY</p>
+                    </div>
+                </div>
+            </div>
+
+            <!-- ------------------ -->
+            <div class="booking-cars">
+                <div class="booking-cars-popular">
+                    <div class="booking-cars-popular-wrapper">
+                        <img src="assets/images/main car.jpg" alt="">
+                    </div>
+                    <div class="bookings-cars-popular-overlay">
+                        <div>
+                            <h1>POPULAR CARS</h1>
+                            <button> → </button>
+                        </div>
+                        <p>The world's leading airlines offer top-notch service, ensuring memorable travel experiences
+                            for passengers. </p>
+                    </div>
+                </div>
+
+                <div class="booking-cars-companies">
+                    <div>
+                        <h3>KIA SONET</h3>
+                        <p>or similar 2-3 doors Compact</p>
+                        <button>View Deal</button>
+                        <img src="assets/images/Kia_Sonet_2025.png" class="bk-img1" alt="kia sonet car">
+                    </div>
+
+                    <div>
+                        <h3>HYUNDAI BAYON 2022</h3>
+                        <p>or similar 2-3 doors Compact</p>
+                        <button>View Deal</button>
+                        <img src="assets/images/hyundai-bayon-i-ny8o.png" class="bk-img2" alt="hyundai car">
+                    </div>
+
+                    <div>
+                        <h3>SUZUKI CROSS</h3>
+                        <p>or similar 2-3 doors Compact</p>
+                        <button>View Deal</button>
+                        <img src="assets/images/Untitled-1.png" class="bk-img3" alt="black car">
+                    </div>
+                </div>
+            </div>
+        </section>
         </main>
 </body>
 </html>
