Add Cars Booking

--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
                 </div>
             </div>
 
-            <!-- ------------------ -->
+            <!-- ---------Cars--------- -->
             <div class="booking-cars">
                 <div class="booking-cars-popular">
                     <div class="booking-cars-popular-wrapper">
