Add question Part

--- a/index.html
+++ b/index.html
@@ -243,6 +243,70 @@
                 </div>
             </div>
         </section>
+
+          <!-- FAQs Section  -->
+        <section class="faqs-section container">
+            <div class="faqs-img-wrapper">
+                <img src="assets/images/FAQs.png" alt="">
+            </div>
+
+            <div class="faq-accordion">
+
+                <section class="faq-section">
+                    <h1 class="faq-title">Frequently Asked Questions</h1>
+                    <p>Common FAQs address various topics concisely, easing information retrieval for curious
+                        individuals.</p>
+                    <div class="faq">
+
+                        <div class="faq-item">
+                            <button class="faq-question">
+                                How do I book a flight?
+                                <span class="icon">+</span>
+                            </button>
+                            <div class="faq-answer">
+                                <p>We offer a 30-day return policy for all items</p>
+                            </div>
+                        </div>
+
+
+                        <div class="faq-item">
+                            <button class="faq-question">
+                                What information do I need to book a flight?
+                                <span class="icon">+</span>
+                            </button>
+                            <div class="faq-answer">
+                                <p>We offer a 30-day return policy for all items</p>
+                            </div>
+                        </div>
+
+
+                        <div class="faq-item">
+                            <button class="faq-question">
+                                Can I book a flight without a passport?
+                                <span class="icon">+</span>
+                            </button>
+                            <div class="faq-answer">
+                                <p>International travel requires a passport, while domestic flights usually accept
+                                    government-issued phone IDs.</p>
+                            </div>
+                        </div>
+
+
+                        <div class="faq-item">
+                            <button class="faq-question">
+                                When should I book a flight to get the best deals?
+                                <span class="icon">+</span>
+                            </button>
+                            <div class="faq-answer">
+                                <p>Yes,we ship to most countries worldwide</p>
+                            </div>
+                        </div>
+
+                    </div>
+                </section>
+
+            </div>
+        </section>
         </main>
 </body>
 </html>
