Modify Question Section

--- a/index.html
+++ b/index.html
@@ -244,7 +244,7 @@
             </div>
         </section>
 
-          <!-- FAQs Section  -->
+          <!-- QUESTIONS SECTION  -->
         <section class="faqs-section container">
             <div class="faqs-img-wrapper">
                 <img src="assets/images/FAQs.png" alt="">
