Add Top Visited Section

--- a/index.html
+++ b/index.html
@@ -307,6 +307,53 @@
 
             </div>
         </section>
+
+         <!-- Top Visited Places Section  -->
+        <section class="visited container">
+            <div class="visited-header">
+                <h1>TOP VISITED PLACES</h1>
+                <p>Explore breathtaking landscapes, historic sites, and vibrant <br> cities worldwide.</p>
+
+                <div class="visited-header-buttons">
+                    <button class="visited-header-btn first">One way</button>
+                    <button class="visited-header-btn">Round Trip</button>
+                    <button class="visited-header-btn">Multi City</button>
+                </div>
+            </div>
+
+            <div class="visited-gallery">
+                <div class="item item-1">
+                    <img src="assets/images/gallery img 1.jpg" alt="">
+                    <div class="heart">♡</div>
+                </div>
+
+                <div class="item item-2">
+                    <img src="assets/images/gallery img 2.jpg" alt="">
+                    <div class="heart">♡</div>
+                </div>
+
+                <div class="item item-3">
+                    <img src="assets/images/gallery img 3.jpg" alt="">
+                    <div class="heart">♡</div>
+                </div>
+
+                <div class="item item-4">
+                    <img src="assets/images/gallery img 4.jpg" alt="">
+                    <div class="heart">♡</div>
+                </div>
+
+                <div class="item item-5">
+                    <img src="assets/images/gallery img 5.jpg" alt="">
+                    <div class="heart">♡</div>
+                    <div class="text-overlay">
+                        <h3>STATUE OF LIBERTY</h3>
+                        <p>"The Statue of Liberty Enlightening the World" was a gift of friendship from the people of
+                            France</p>
+                    </div>
+                </div>
+            </div>
+
+        </section>
         </main>
 </body>
 </html>
