--- a/index.html
+++ b/index.html
@@ -355,5 +355,19 @@
 
         </section>
         </main>
+        
+    <!-- Newsletter Section  -->
+    <section class="newsletter">
+        <h1 class="newsletter-title">SUBSCRIBE OUR NEWSLETTER</h1>
+        <p>Subscribe To Receive Our Interesting Updates</p>
+
+        <div class="newsletter-input">
+            <input type="email" placeholder="Enter your email address">
+            <button>Subscribe</button>
+        </div>
+
+        <img src="assets/images/newletter ship.png" class="first" alt="">
+        <img src="assets/images/newletter globe.png" class="second" alt="">
+    </section>
 </body>
 </html>
