Add Footer section

--- a/index.html
+++ b/index.html
@@ -369,5 +369,27 @@
         <img src="assets/images/newletter ship.png" class="first" alt="">
         <img src="assets/images/newletter globe.png" class="second" alt="">
     </section>
+
+     <!-- Footer Section  -->
+    <section class="footer ">
+        <div class="footer-contact">
+            <p class="logo">Travel agency.</p>
+
+            <div>
+                <p class="first one">
+                    <img src="assets/images/location.png" alt="">
+                    Awesome Road,New York, USA
+                </p>
+                <p class="second one">
+                    <img src="assets/images/telephone.png" alt="">
+                    +8801322095658
+                </p>
+                <p class="third one">
+                    <img src="assets/images/mail.png" alt="">
+                    hekmat7868f@gmail.com
+                </p>
+            </div>
+        </div>
+        </section>
 </body>
 </html>
