Modify News Section

--- a/index.html
+++ b/index.html
@@ -356,7 +356,7 @@
         </section>
         </main>
         
-    <!-- Newsletter Section  -->
+    <!-- News Section  -->
     <section class="newsletter">
         <h1 class="newsletter-title">SUBSCRIBE OUR NEWSLETTER</h1>
         <p>Subscribe To Receive Our Interesting Updates</p>
