Modify Footer section

--- a/index.html
+++ b/index.html
@@ -378,16 +378,66 @@
             <div>
                 <p class="first one">
                     <img src="assets/images/location.png" alt="">
-                    Awesome Road,New York, USA
+                    Karte-4,Kabul, AFG
                 </p>
                 <p class="second one">
                     <img src="assets/images/telephone.png" alt="">
-                    +8801322095658
+                    <a href="tel:+93781624146">+93781624146</a>
                 </p>
                 <p class="third one">
                     <img src="assets/images/mail.png" alt="">
-                    hekmat7868f@gmail.com
+                   <a href="mailto:salehdemir786@gmail.com">salehdemir786@gmail.com</a> 
                 </p>
+            </div>
+        </div>
+
+        <div class="footer-right">
+            <div class="footer-destination">
+                <h3>Top Destination</h3>
+                <ul>
+                    <li>Kabul</li>
+                    <li>London</li>
+                    <li>Rome</li>
+                    <li>Muscat</li>
+                    <li>New York</li>
+                </ul>
+            </div>
+
+
+            <div class="footer-links">
+                <h3>Useful Links</h3>
+                <ul>
+                    <li>About Us</li>
+                    <li>Company Profile</li>
+                    <li>Team Members</li>
+                    <li>Support</li>
+                    <li>Career</li>
+                </ul>
+            </div>
+
+
+            <div class="footer-app">
+                <h3>Download App</h3>
+                <p class="first">Lorem ipsum dolor, sit amet consectetur elit. <br> Quos iusto corporis debitis, sit
+                    facere quo.</p>
+
+                <div class="footer-app-wrapper">
+                    <div class="for app-store ">
+                        <img src="assets/images/apple.png" alt="">
+                        <div class="third">
+                            <p>Download on the</p>
+                            <p class="second">App Store</p>
+                        </div>
+                    </div>
+
+                    <div class="for google-play ">
+                        <img src="assets/images/google-play.png" alt="">
+                        <div class="third">
+                            <p class=" first">Get in on</p>
+                            <p class="second">Google Play</p>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
         </section>
